发送文件和数据样例代码

--- a/src/app/pages/welcome/test/test/test.component.html
+++ b/src/app/pages/welcome/test/test/test.component.html
@@ -9,3 +9,5 @@
 <button nz-button (click)="changeShape('circle')">圆形</button>
 
 <button (click)="getHttp()">发送请求</button>
+<input #excel type="file" name="excel" />
+<button (click)="uploadExcel()">发送请求</button>
