--- a/src/app/pages/welcome/test/test/test.component.html
+++ b/src/app/pages/welcome/test/test/test.component.html
@@ -11,3 +11,5 @@
 <button (click)="getHttp()">发送请求</button>
 <input #excel type="file" name="excel" />
 <button (click)="uploadExcel()">发送请求</button>
+
+<button (click)="downloadExcel()">下载</button>
